--- a/payment.html
+++ b/payment.html
@@ -41,9 +41,9 @@
   <div class="methods">
     <a href="btc_payment.html" class="method">Bitcoin (BTC)</a>
     <a href="eth_payment.html" class="method">Ethereum (ETH)</a>
-    <a href="trc20_payment.html" class="method">USDT - TRC20</a>
-    <a href="bep20_payment.html" class="method">USDT - BEP20</a>
-    <a href="erc20_payment.html" class="method">USDT - ERC20</a>
+    <a href="trc20.html" class="method">USDT - TRC20</a>
+    <a href="bep20.html" class="method">USDT - BEP20</a>
+    <a href="erc20.html" class="method">USDT - ERC20</a>
   </div>
 </body>
 </html>
