--- a/payment.html
+++ b/payment.html
@@ -42,8 +42,8 @@
     <a href="btc_payment.html" class="method">Bitcoin (BTC)</a>
     <a href="eth_payment.html" class="method">Ethereum (ETH)</a>
     <a href="trc20_usdt.html" class="method">USDT - TRC20</a>
-    <a href="bep20_usdt.html" class="method">USDT - BEP20</a>
-    <a href="erc20_usdt.html" class="method">USDT - ERC20</a>
+    <a href="usdt_bep20.html" class="method">USDT - BEP20</a>
+    <a href="usdt_erc20.html" class="method">USDT - ERC20</a>
   </div>
 </body>
 </html>
