--- a/Email_input.html
+++ b/Email_input.html
@@ -68,26 +68,24 @@
   </div>
 
   <script>
-    document.getElementById("emailForm").addEventListener("submit", function (e) {
-      e.preventDefault(); // Stop form from redirecting
-      const formData = new FormData(this);
+    const form = document.getElementById("emailForm");
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+      const formData = new FormData(form);
       fetch("https://formspree.io/f/xrbqlqqd", {
         method: "POST",
         body: formData,
-        headers: {
-          Accept: "application/json"
-        }
-      }).then(response => {
-        if (response.ok) {
-          window.location.href = "plan_select.html"; // redirect after success
+        headers: { Accept: "application/json" }
+      }).then(res => {
+        if (res.ok) {
+          window.location.href = "plan_select.html";
         } else {
-          alert("Error submitting form.");
+          alert("Form submission failed.");
         }
       }).catch(() => {
-        alert("Network error.");
+        alert("Network error. Please try again.");
       });
     });
   </script>
 </body>
 </html>
-
