--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     * {
       box-sizing: border-box;
     }
-    html, body {
+    body {
       background-color: #000;
       color: #00ff88;
       font-family: 'Courier New', monospace;
       margin: 0;
       padding: 0;
-      height: 100%;
-    }
-
-    body {
       display: flex;
       justify-content: center;
       align-items: center;
+      min-height: 100vh;
+      text-align: center;
     }
 
     .card {
-      width: 100%;
-      max-width: 480px;
-      padding: 1.5rem;
+      background-color: #111;
+      border-radius: 12px;
+      padding: 2rem;
+      max-width: 400px;
+      width: 90%;
     }
 
     h1 {
@@ -34,14 +34,12 @@
       font-weight: 900;
       color: #00ff88;
       margin-bottom: 0.3rem;
-      text-align: center;
       text-shadow: 0 0 10px #00cc66, 0 0 20px #008844;
     }
 
     .tagline {
       color: #00cc66;
       margin-bottom: 1.5rem;
-      text-align: center;
       text-shadow: 0 0 5px #007755;
     }
 
@@ -50,6 +48,7 @@
       color: #00cc66;
       font-size: 1rem;
       padding-left: 1.5rem;
+      text-align: left;
       margin-bottom: 1.5rem;
     }
 
@@ -92,7 +91,6 @@
     .license-note {
       font-size: 0.85rem;
       color: #00cc66;
-      text-align: center;
       margin: 0.5rem 0;
     }
 
@@ -166,3 +164,4 @@
   </div>
 </body>
 </html>
+
