--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FlashVault</title>
 
-  <!-- Manifest and Service Worker -->
+  <!-- PWA META & MANIFEST -->
   <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#00ff88" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js');
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log("Service Worker registered", reg))
+        .catch(err => console.error("Service Worker error", err));
     }
   </script>
 
