--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <p>* This software is sold as-is. We are not liable for how you choose to use it.</p>
     </div>
 
-    <a href="https://wa.me/18739100804" target="_blank" class="support-btn">Contact Support</a>
+    <a href="https://wa.link/nllu6e" target="_blank" class="support-btn">Contact Support</a>
   </div>
 
   <script>
